kinetic brand line - fix JS & update spacing and layout on mobile

--- a/foundation_cms/static/scss/components/home_page/kinetic_type_brand_line.scss
+++ b/foundation_cms/static/scss/components/home_page/kinetic_type_brand_line.scss
@@ -18,6 +18,8 @@
   &__full-text {
     display: flex;
     flex-direction: column;
+
+    @include mofo-text-style($header-styles, "h3", $header-font-family);
   }
 
   &__phrase-wrapper {
@@ -47,10 +49,11 @@
     }
   }
 
-  @include breakpoint(medium up) {
+  @include breakpoint(400px up) {
     &__full-text {
       align-items: center;
       flex-direction: row;
+      gap: 0.5rem;
     }
   }
 }
